# dlms_parser

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  HOWTO.md  README.md  REFERENCE.md  build-linux.sh  build-macos.sh  idf_component.yml  library.json  test.sh
.github/workflows/: ci.yaml  publish.yml
src/dlms_parser/: apdu_handler.cpp  apdu_handler.h  axdr_parser.cpp  axdr_parser.h  dlms_parser.cpp  dlms_parser.h  gcm_decryptor.cpp  gcm_decryptor.h  hdlc_decoder.cpp  hdlc_decoder.h  log.h  mbus_decoder.cpp  mbus_decoder.h  parser.cpp  parser.h  pattern.h  types.h  utils.cpp  utils.h
src/dlms_parser/decryption/: aes_128_gcm_decryptor.h  aes_128_gcm_decryptor_bearssl.h  aes_128_gcm_decryptor_mbedtls.h  aes_128_gcm_decryptor_tfpsa.h
tests/: CMakeLists.txt  test_axdr_registry.cpp  test_example.cpp  test_hdlc_decoder.cpp  test_mbus_decoder.cpp  test_meter_dumps.cpp  test_util.h  test_utils.cpp
tests/dumps/: _obis_codes.md  hdlc_iskra550_decoded.xml  hdlc_kaifa_ma304h3e_decoded.xml  hdlc_kamstrup_omnipower.gak  hdlc_kamstrup_omnipower_decoded.xml  hdlc_landis_gyr_e450_decoded.xml  hdlc_landis_gyr_zmf100_decoded.xml  hdlc_lgz_e450_2.gak  hdlc_lgz_e450_2.key  hdlc_lgz_e450_2_decoded.xml  hdlc_norway_han_1phase_decoded.xml  hdlc_norway_han_3phase_decoded.xml  mbus_kmswest_decoded.xml  mbus_netz_noe_p1_decoded.xml  raw_egd_example_decoded.xml  raw_energomera_decoded.xml  raw_sagecom_xt211_decoded.xml  raw_salzburg_netz_decoded.xml  sagemcom_xt211.h
tests/expected/: hdlc_iskra550.h  hdlc_kamstrup_omnipower.h  hdlc_landis_gyr_e450.h  hdlc_landis_gyr_zmf100.h  hdlc_lgz_e450_2.h  hdlc_norway_han_1phase.h  hdlc_norway_han_3phase.h  mbus_netz_noe_p1.h  raw_egd_example.h  raw_energomera.h  raw_salzburg_netz.h
tools/: decode_log.py  decode_readout.cpp
